# solana-cookbook-rust

./: .env.example  .gitignore  Cargo.toml  ReadMe.md
src/: lib.rs  main.rs
src/jwest_accounts/: create_account.rs  generate_pda.rs  get_balance.rs  mod.rs
src/jwest_development/: connect_to_environment.rs  create_nonblocking_rpc_client.rs  get_test_sol.rs  mod.rs  subscribe_to_events.rs
src/jwest_transactions/: add_priority_fees.rs  mint_token_test.rs  mod.rs  send_sol.rs
src/jwest_wallets/: create_keypair.rs  mod.rs
