[package]
name = "solana-cookbook-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
chrono = "0.4.38"
solana-client = "2.1.5"
solana-sdk = "2.1.5"
solana-pubkey = "=2.1.5"
solana-signature = "2.1.5"
solana-program-test = "2.1.5"
solana-program = "2.1.5"
solana-transaction-status-client-types = "2.1.5"
spl-token = "=7.0.0"
solana-account-decoder-client-types = "2.1.5"
tokio-stream = "0.1.17"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
